# gestion-impacts

./: .gitignore  README.md  mkdocs.yml  pyproject.toml  setup.py
docs/models/gestion_impacts/: impact.md
gestion_impacts/: __init__.py  custom.py  filtersets.py  forms.py  models.py  navigation.py  tables.py  urls.py  views.py
gestion_impacts/api/: serializers.py  urls.py  views.py
gestion_impacts/migrations/: 0001_initial.py  0002_alter_impact_options_impact_vm.py  0003_rename_name_impact_impact_impact_description_and_more.py  0004_alter_impact_unique_together_alter_impact_impact_and_more.py  0005_viewimpactipaddress_alter_impact_ip_address.py  0006_delete_viewimpactipaddress.py
gestion_impacts/static/docs/models/gestion_impacts/impact/: index.html
gestion_impacts/templates/gestion_impacts/: impact.html  impact_edit.html  impact_import.html  impact_list.html
