[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name =  "gestion-impacts"
version = "0.1.0"
authors = [
    {name = "Votre Nom", email = "votre.email@example.com"},
]
description = "Plugin pour la gestion des impacts dans NetBox."
readme = "README.md"

classifiers = [
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Developers',
    'Natural Language :: French',
    "Programming Language :: Python :: 3 :: Only",
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
]

requires-python = ">=3.10.0"
